--- a/x134mp.md
+++ b/x134mp.md
@@ -11,7 +11,7 @@
 
 ```js
 a@debian:~/build/clean/x9k3$ pypy3 x13mp.py -i /home/a/stuff/master.m3u8 -o fu3
-Namespace(input='/home/a/stuff/master.m3u8', output_dir='fu3', sidecar_file=None, time=2, hls_tag='x_cue', window_size=5, delete=False, live=False, replay=False, shulga=False, version=False, program_date_time=False)
+Namespace(input='/home/a/stuff/master.m3u8', output_dir='fu3', sidecar_file='sidecar.txt', time=2, hls_tag='x_cue', window_size=5, delete=False, live=False, replay=False, shulga=False, version=False, program_date_time=False)
 {
    "media": "/home/a/stuff/stream_0.m3u8",
    "tags": {
