--- a/x134mp.md
+++ b/x134mp.md
@@ -61,23 +61,23 @@ fu3/1
 Process-2  is up
 fu3/2
 Process-3  is up
-fu3/2/seg0.ts:   start: 2.050167   end: 4.403000   duration: 2.352833  
+fu3/2/seg0.ts:   start: 2.050167   end: 4.403000   duration: 2.352833     \
+throttling 2.21                                                            \
+fu3/0/seg0.ts:   start: 2.050167   end: 4.403000   duration: 2.352833        ----> start: 2.050167   end: 4.403000   duration: 2.352833
+throttling 2.2                                                             /
+fu3/1/seg0.ts:   start: 2.050167   end: 4.403000   duration: 2.352833     /
 throttling 2.21
-fu3/0/seg0.ts:   start: 2.050167   end: 4.403000   duration: 2.352833
-throttling 2.2
-fu3/1/seg0.ts:   start: 2.050167   end: 4.403000   duration: 2.352833
-throttling 2.21
-fu3/2/seg1.ts:   start: 4.403000   end: 6.405000   duration: 2.002000
+fu3/2/seg1.ts:   start: 4.403000   end: 6.405000   duration: 2.002000     \
+throttling 1.89                                                            \
+fu3/0/seg1.ts:   start: 4.403000   end: 6.405000   duration: 2.002000        -----> start: 4.403000   end: 6.405000   duration: 2.002000 
+throttling 1.82                                                            /
+fu3/1/seg1.ts:   start: 4.403000   end: 6.405000   duration: 2.002000     /
 throttling 1.89
-fu3/0/seg1.ts:   start: 4.403000   end: 6.405000   duration: 2.002000
-throttling 1.82
-fu3/1/seg1.ts:   start: 4.403000   end: 6.405000   duration: 2.002000
-throttling 1.89
-fu3/0/seg2.ts:   start: 6.405000   end: 8.407000   duration: 2.002000
-throttling 1.87
-fu3/2/seg2.ts:   start: 6.405000   end: 8.407000   duration: 2.002000
-throttling 1.87
-fu3/1/seg2.ts:   start: 6.405000   end: 8.407000   duration: 2.002000
+fu3/0/seg2.ts:   start: 6.405000   end: 8.407000   duration: 2.002000      \
+throttling 1.87                                                             \
+fu3/2/seg2.ts:   start: 6.405000   end: 8.407000   duration: 2.002000        -----> start: 6.405000   end: 8.407000   duration: 2.002000
+throttling 1.87                                                            /
+fu3/1/seg2.ts:   start: 6.405000   end: 8.407000   duration: 2.002000    /
 throttling 1.87
 ```
 
